# advanced-python

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
02_oop_patterns/factory/: README.md  pattern.py  strategies.py
02_oop_patterns/observer/: README.md
02_oop_patterns/repository/: README.md  repository.py
02_oop_patterns/solid_principles/: Dependency_inversion.md  Interface_segregation.md  Liskov_substitution.md  Open_closed.md  __init__.py  dependency_inversion.py  interface_segregation.py  liskov_substitution.py  open_closed.py  order_processor_evolution.py  single_respomsibility.py  single_responsibility.md  single_responsibility.py  solid.md
04_fastapi_labs/: DEPENDENCY_INJECTION.md  QUICK_REFERENCE.md  dependency_injection_examples.py
capstone_project/: ARCHITECTURE.md  ASYNC_TESTING_GUIDE.md  README.md
capstone_project/alembic/: env.py
capstone_project/alembic/versions/: de82fed81ee9_initial_migration_with_users_table.py
capstone_project/src/: main.py
capstone_project/src/api/: dependencies.py
capstone_project/src/api/v1/: users.py
capstone_project/src/core/: config.py  models.py
capstone_project/src/db/: models.py  session.py
capstone_project/src/repositories/: base.py  user.py
capstone_project/src/services/: user.py
capstone_project/tests/: conftest.py  test_user_service.py  test_users_api.py
capstone_project/tests/integration/: test_user_endpoints.py
capstone_project/tests/unit/domain/: test_user_service.py
