[project]
name = "advanced-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.45",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.8",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # import sorting
    "B",  # bugbear
    "UP", # pyupgrade
    "SIM",# simplify
    "W",  # pycodestyle warnings
]
ignore = [
    "E203", # allow whitespace before ':' for slices
    "E501", # handled by formatter
    "B008", # do not warn about function calls in f-strings
]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
