[project]
name = "advanced-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pymysql>=1.1.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.8",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # import sorting
    "B",  # bugbear
    "UP", # pyupgrade
    "SIM",# simplify
    "W",  # pycodestyle warnings
]
ignore = [
    "E203", # allow whitespace before ':' for slices
    "E501", # handled by formatter
    "B008", # do not warn about function calls in f-strings
]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
